--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -40,12 +40,13 @@
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
+    "@react-awesome-query-builder/antd": "^6.1.2",
+    "@react-awesome-query-builder/bootstrap": "^6.1.2",
+    "@react-awesome-query-builder/ui": "^6.1.2",
     "@terminusdb/terminusdb-client": "^10.0.25",
     "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
-    "material-ui-confirm": "^3.0.8",
-    "react-awesome-query-builder": "^5.4.0",
     "react-bootstrap": "^2.7.0",
     "react-csv": "^2.2.2",
     "react-icon": "^1.0.0",
@@ -77,6 +78,7 @@
     "react-hot-loader": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "rimraf": "^2.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.9.2",
