--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -42,7 +42,13 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@auth0/auth0-spa-js": "^1.19.3",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphiql/toolkit": "^0.8.0",
+    "@react-awesome-query-builder/bootstrap": "^6.1.2",
+    "@react-awesome-query-builder/ui": "^6.1.2",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@terminusdb/terminusdb-client": "^10.0.28",
@@ -72,6 +78,7 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^3.3.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-query-builder": "^5.4.1",
     "react-bootstrap": "^2.7.0",
     "react-codemirror2": "^7.2.1",
     "react-collapsed": "^3.6.0",
@@ -92,6 +99,7 @@
     "react-use-dimensions": "^1.2.1",
     "react-uuid": "^2.0.0",
     "react-vertical-timeline-component": "^3.3.3",
+    "reactstrap": "^9.1.6",
     "recharts": "^2.1.8",
     "sass-loader": "^11.1.1",
     "ts-jest": "^29.0.5",
