--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -40,6 +40,7 @@
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-awesome-query-builder/antd": "^6.1.2",
