--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -37,6 +37,10 @@
     "test",
     "lint"
   ],
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
@@ -80,7 +84,6 @@
     "mini-css-extract-plugin": "^2.7.2",
     "pre-commit": "^1.1.3",
     "react-hot-loader": "^1.3.0",
-    "react-router-dom": "^5.1.2",
     "rimraf": "^2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
