--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -38,8 +38,7 @@
     "lint"
   ],
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   },
   "repository": {},
   "author": "terminusdb group",
