--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -50,12 +50,14 @@ jobs:
     - name: Upload tdb-dashboard to dev s3
       if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
       env:
+        NODE_OPTIONS: --max-old-space-size=6144
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: aws s3 sync packages/tdb-dashboard/dist/ s3://${{ secrets.S3_DEV_BUCKET }} --region=${{ secrets.AWS_REGION }}
     - name: Upload tdb-dashboard to prod s3
       if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
       env:
+        NODE_OPTIONS: --max-old-space-size=6144
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: aws s3 sync packages/tdb-dashboard/dist/ s3://${{ secrets.S3_PROD_BUCKET }} --region=${{ secrets.AWS_REGION }}
@@ -63,6 +65,7 @@ jobs:
       if: ${{ github.event_name != 'pull_request' }}
       run: python3 .ci/clean_cloudflare_cache.py ${{ github.ref }}
       env:
+        NODE_OPTIONS: --max-old-space-size=6144
         CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
         CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
         CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
@@ -111,7 +114,7 @@ jobs:
         node-version: 18
         registry-url: 'https://registry.npmjs.org'
     - name: Build packages
-      run: node --max-heap-size=100000 && npm i && npm run build --ws
+      run:  npm i && npm run build --ws
     - name: Publish workspaces
       if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
       env:
