--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -50,6 +50,7 @@
     "@terminusdb/terminusdb-documents-ui-template": "^6.1.6",
     "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
+    "codemirror": "^6.0.1",
     "date-fns": "^2.28.0",
     "react-bootstrap": "^2.7.0",
     "react-css-theme-switcher": "^0.3.0",
