--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -82,7 +82,7 @@
     "acorn": "^8.8.0",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
-    "codemirror": "^6.0.1",
+    "codemirror": "5.64.0",
     "cypress-plugin-snapshots": "^1.4.4",
     "dotenv": "^16.0.1",
     "highlight.js": "^11.6.0",
