--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -110,9 +110,9 @@ jobs:
       with:
         node-version: 18
         registry-url: 'https://registry.npmjs.org'
-    - name: change node options
-      run: export NODE_OPTIONS="--max_old_space_size=4096"
     - name: Build packages
+      env:
+        NODE_OPTIONS: --max_old_space_size=4096
       run:  npm i && npm run build --ws
     - name: Publish workspaces
       if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
