--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -12,6 +12,7 @@
     "playground": "webpack serve --mode development  --open --progress --port 3033 --host localhost --config playground/webpack.config.js",
     "testDb": "webpack serve --mode development  --open --progress --port 3032 --host localhost --config test/webpack.config.js",
     "mockTest": "webpack serve --mode development  --open --progress --port 3035 --host localhost --config mockTest/webpack.config.js",
+    "sandbox": "webpack serve --mode development  --open --progress --port 3036 --host localhost --config sandbox/webpack.config.js",
     "diff": "webpack serve --mode development  --open --progress --port 3034 --host localhost --config diff/webpack.config.js",
     "lint": "eslint src",
     "autofix": "eslint src --fix",
