--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -118,7 +118,9 @@
     "mermaid": "^9.3.0",
     "prismjs": "^1.28.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-theme-switcher": "^1.0.7",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
+    "react-bootswatch-select": "^1.0.11",
     "react-calendar": "^4.2.1",
     "react-codemirror2": "^7.2.1",
     "react-css-theme-switcher": "^0.3.0",
