--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -19,6 +19,10 @@ jobs:
       with:
         node-version: 18
     - run: npm i --legacy-peer-deps
+    - name : Build Document-UI
+      run : |
+        cd packages/tdb-document-ui
+        npm run build
     - name: Build
       if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
       run: |
@@ -78,6 +82,10 @@ jobs:
       with:
         node-version: 18
     - run: npm i --legacy-peer-deps
+    - name : Build Document-UI
+      run : |
+        cd packages/tdb-document-ui
+        npm run build
     - name: Build local dashboard
       if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' || startsWith(github.ref, 'refs/tags/v') }}
       run: |
