--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -92,6 +92,8 @@ jobs:
         npm run build
     - name: Build local dashboard
       if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' || startsWith(github.ref, 'refs/tags/v') }}
+      env:
+        NODE_OPTIONS: --max_old_space_size=4096
       run: |
         cd packages/tdb-dashboard
         echo '
