--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui-template",
-  "version": "6.1.8",
+  "version": "6.2.0-alpha.3",
   "description": "SDK to build Application from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
@@ -56,7 +56,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "webpack-dev-server": "^4.11.0",
+    "img-loader": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
@@ -67,27 +68,20 @@
     "@terminusdb/terminusdb-client": "^10.0.29",
     "@uiw/react-textarea-code-editor": "^2.1.1",
     "acorn": "^8.8.0",
-    "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
     "codemirror-graphql": "^2.0.2",
-    "dotenv": "^16.0.1",
+    "codemirror": "5.65.12",
     "highlight.js": "^11.6.0",
     "html-react-parser": "^3.0.4",
-    "img-loader": "^4.0.0",
     "mermaid": "^9.3.0",
     "prismjs": "^1.28.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-codemirror2": "^7.2.1",
     "react-diff-viewer": "^3.1.1",
+    "graphql-formatter": "^1.0.3",
     "react-icons": "^4.3.1",
-    "react-json-editor-ajrm": "^2.5.13",
-    "react-jsonschema-form": "^1.8.1",
-    "react-jsonschema-form-extras": "^0.9.67",
-    "react-leaflet-fullscreen": "^2.0.2",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
-    "react-syntax-highlighter": "^15.5.0",
-    "uuid": "^9.0.0"
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
