--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "./packages/tdb-dashboard"
   ],
   "dependencies": {
+    "@uiw/codemirror-theme-vscode": "^4.19.16",
     "bootswatch": "^5.2.3",
+    "codemirror": "^6.0.1",
     "esbuild-jest": "^0.5.0",
     "jsonlint-mod": "^1.7.6",
     "react-pro-sidebar": "^0.6.0"
