--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui-template",
-  "version": "6.2.0-alpha.3",
+  "version": "6.2.1-alpha.4",
   "description": "SDK to build Application from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
@@ -61,27 +61,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
-    "@rjsf/core": "^5.0.0-beta.14",
-    "@rjsf/utils": "^5.0.0-beta.14",
-    "@rjsf/validator-ajv8": "^5.0.0-beta.14",
-    "@terminusdb/rjsf-core": "^4.0.5",
-    "@terminusdb/terminusdb-client": "^10.0.29",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
-    "acorn": "^8.8.0",
     "bootstrap": "^5.1.3",
-    "codemirror-graphql": "^2.0.2",
-    "codemirror": "5.65.12",
-    "highlight.js": "^11.6.0",
-    "html-react-parser": "^3.0.4",
-    "mermaid": "^9.3.0",
-    "prismjs": "^1.28.0",
     "react-bootstrap": "^2.7.0",
-    "react-bootstrap-typeahead": "^6.0.0-alpha.9",
-    "react-codemirror2": "^7.2.1",
-    "react-diff-viewer": "^3.1.1",
+    "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
+    "@uiw/codemirror-theme-vscode":"4.19.16",
+    "@uiw/react-codemirror": "^4.12.4",
+    "codemirror": "^6.0.1",
     "graphql-formatter": "^1.0.3",
     "react-icons": "^4.3.1",
-    "react-select": "^5.2.2",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-select": "^5.2.2"
   }
 }
