--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui",
-  "version": "6.1.8",
+  "version": "6.2.2-alpha.4",
   "description": "SDK to build UI from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
   "jsnext:main": "es6/index",
+  "files": [
+    "*.md",
+    "src",
+    "es6",
+    "dist"
+  ],
   "scripts": {
     "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js' && babel ./src/css --out-dir es6/css/ --copy-files",
     "build": "npm run build-es6 && rimraf dist && webpack --mode production",
@@ -86,7 +92,10 @@
     "ts-jest": "^29.0.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "webpack-dev-server": "^4.11.0",
+    "react-test-renderer": "^17.0.2",
+    "@terminusdb/terminusdb-client": "^10.0.29",
+    "img-loader": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
@@ -96,46 +105,35 @@
     "@codemirror/language-data": "^6.1.0",
     "@codemirror/state": "^6.1.2",
     "@codemirror/theme-one-dark": "^6.1.0",
+    "chroma-js": "^2.4.2",
     "@rjsf/core": "^5.0.0-beta.14",
     "@rjsf/utils": "^5.0.0-beta.14",
     "@rjsf/validator-ajv8": "^5.0.0-beta.14",
     "@terminusdb/rjsf-core": "^4.0.5",
-    "@terminusdb/terminusdb-client": "^10.0.29",
     "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
     "@uiw/react-codemirror": "^4.12.4",
     "@uiw/react-md-editor": "^3.20.2",
     "@uiw/react-textarea-code-editor": "^2.1.1",
-    "acorn": "^8.8.0",
     "bootstrap": "^5.1.3",
-    "chroma-js": "^2.4.2",
     "codemirror": "^6.0.1",
-    "highlight.js": "^11.6.0",
     "html-react-parser": "^3.0.4",
-    "img-loader": "^4.0.0",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-arrowheads": "^1.4.0",
     "leaflet-geometryutil": "^0.10.0",
     "mermaid": "^9.3.0",
-    "prismjs": "^1.28.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-theme-switcher": "^1.0.7",
-    "react-bootstrap-typeahead": "^6.0.0-alpha.9",
-    "react-bootswatch-select": "^1.0.11",
     "react-calendar": "^4.2.1",
-    "react-css-theme-switcher": "^0.3.0",
-    "react-date-picker": "9.2.0",
-    "react-datetime-picker": "^4.2.1",
+    "react-date-picker": "^10.0.3",
+    "react-datetime-picker": "^5.0.3",
     "react-diff-viewer": "^3.1.1",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
-    "react-jsonschema-form": "^1.8.1",
     "react-leaflet": "^3.2.5",
     "react-leaflet-fullscreen": "^2.0.2",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-test-renderer": "^17.0.2",
     "uuid": "^9.0.0"
+    
   }
 }
