--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui-template",
-  "version": "6.2.1-alpha.4",
+  "version": "6.2.1-alpha.5",
   "description": "SDK to build Application from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
@@ -57,9 +57,7 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0",
-    "img-loader": "^4.0.0",
-    "@uiw/react-codemirror": "^4.12.4",
-    "@uiw/codemirror-theme-vscode": "^4.12.4"
+    "img-loader": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
