--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui",
-  "version": "6.2.2-alpha.4",
+  "version": "6.2.2-alpha.6",
   "description": "SDK to build UI from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
@@ -110,6 +110,7 @@
     "@rjsf/utils": "^5.0.0-beta.14",
     "@rjsf/validator-ajv8": "^5.0.0-beta.14",
     "@terminusdb/rjsf-core": "^4.0.5",
+    "@uiw/codemirror-theme-vscode":"4.19.16",
     "@uiw/react-codemirror": "^4.12.4",
     "@uiw/react-md-editor": "^3.20.2",
     "@uiw/react-textarea-code-editor": "^2.1.1",
