--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0"
-  }
+  },
+  "overrides": {"@codemirror/state": "^6.2.0"}
 }
