--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -117,6 +117,12 @@ jobs:
         cd dist
         tar caf release.tar.gz *
 
+
+    - uses: actions/upload-artifact@v3
+      with:
+        name: dashboard
+        path: packages/tdb-dashboard/dist/release.tar.gz
+
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/v')
       uses: ncipollo/release-action@v1.10.0
