--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -49,14 +49,13 @@
     "core-js": "^3.8.2",
     "d3": "^5.16.0",
     "date-fns": "^2.16.1",
-    "gojs": "^2.3.8",
-    "gojs-react": "^1.1.2",
-    "jointjs": "^3.7.3",
     "prop-types": "^15.6.0",
     "react-bootstrap": "^2.7.0",
+    "react-d3-library": "^1.1.8",
     "react-dates": "^21.8.0",
     "react-draggable-list": "^4.1.0",
     "react-draggable-lists": "^1.0.1",
+    "react-force-graph": "^1.43.0",
     "react-icons": "^3.11.0",
     "react-motion": "^0.5.2",
     "react-numeric-input": "^2.2.3",
@@ -67,6 +66,7 @@
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
     "react-use-dimensions": "^1.2.1",
+    "reactflow": "^11.7.4",
     "recharts": "^1.8.5"
   },
   "devDependencies": {
