--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -27,6 +27,7 @@
     "test": "jest"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!react-dnd|dnd-core|@react-dnd)"
     ]
@@ -110,6 +111,7 @@
     "bootstrap": "^5.1.3",
     "chroma-js": "^2.4.2",
     "html-react-parser": "^3.0.4",
+    "jest-transform-css": "^6.0.1",
     "leaflet": "^1.9.4",
     "leaflet-arrowheads": "^1.4.0",
     "mermaid": "^9.3.0",
@@ -120,8 +122,9 @@
     "react-diff-viewer": "^3.1.1",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "^4.2.1",
     "react-leaflet-fullscreen": "^2.0.2",
+    "react-leaflet-universal": "^2.2.1",
     "react-select": "^5.2.2",
     "react-syntax-highlighter": "^15.5.0",
     "uuid": "^9.0.0"
