--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -48,6 +48,7 @@
     "@apollo/client": "^3.7.1",
     "@auth0/auth0-spa-js": "^1.19.3",
     "@codemirror/highlight": "^0.19.8",
+    "@cypress/webpack-preprocessor": "^5.17.1",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
